hphp/hack/test/typecheck/tconst/access_expand_error_1.php.exp
File "access_expand_error_1.php", line 5, characters 10-10:
Wrong type hint (Typing[4107])
File "access_expand_error_1.php", line 4, characters 21-22:
Unbound name, Typing: C::TC
